--- a/FrontEnd/LelkiBekeFrontEnd/i18n/locales/hu.json
+++ b/FrontEnd/LelkiBekeFrontEnd/i18n/locales/hu.json
@@ -81,6 +81,7 @@
       "parNoItems": "Nincsenek elérhető ételek",
       "cartTitle": "Rendelésed",
       "addToCart": "Kosárba",
+      "specialRequest": "Különleges kérés hozzáadása...",
       "cartEmpty": "A kosarad üres",
       "total": "Összesen",
       "checkout": "Pénztár"
